--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -39,4 +39,24 @@
     <servlet-name>CarrinhoController</servlet-name>
     <url-pattern>/cart</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CadastroController</display-name>
+    <servlet-name>CadastroController</servlet-name>
+    <servlet-class>loja.webComponents.controller.CadastroController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CadastroController</servlet-name>
+    <url-pattern>/cadastro</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LoginController</display-name>
+    <servlet-name>LoginController</servlet-name>
+    <servlet-class>loja.webComponents.controller.LoginController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LoginController</servlet-name>
+    <url-pattern>/login</url-pattern>
+  </servlet-mapping>
 </web-app>
