--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -59,4 +59,35 @@
     <servlet-name>LoginController</servlet-name>
     <url-pattern>/login</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>LimparCarrinhoController</display-name>
+    <servlet-name>LimparCarrinhoController</servlet-name>
+    <servlet-class>loja.webComponents.controller.LimparCarrinhoController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>LimparCarrinhoController</servlet-name>
+    <url-pattern>/limpar</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CarrinhoOperacoesController</display-name>
+    <servlet-name>CarrinhoOperacoesController</servlet-name>
+    <servlet-class>loja.webComponents.controller.CarrinhoOperacoesController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CarrinhoOperacoesController</servlet-name>
+    <url-pattern>/cartUpdate</url-pattern>
+  </servlet-mapping>
+  
+  <servlet>
+    <description></description>
+    <display-name>SubirEncomendaController</display-name>
+    <servlet-name>SubirEncomendaController</servlet-name>
+    <servlet-class>loja.webComponents.controller.SubirEncomendaController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>SubirEncomendaController</servlet-name>
+    <url-pattern>/encomendar</url-pattern>
+  </servlet-mapping>
 </web-app>
