Add Listener Produtos
Os códigos dos produtos agora são todos listados no momento em que o Servidor inicia o Contexto.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -129,4 +129,7 @@
     <servlet-name>PerfilController</servlet-name>
     <url-pattern>/perfil</url-pattern>
   </servlet-mapping>
+  <listener>
+    <listener-class>loja.webComponents.listener.ListProdutoListener</listener-class>
+  </listener>
 </web-app>
