Add Funcionalidades Cadastrar Produto e Listar Pedidos
Ao validar a conta como admin na url /loja/admin, existe a opção de cadastrar produto, caso o produto seja cadastrado com sucesso no banco de dados, a imagem passada no formulário vai ter código deste produto e ser armazenada como png, para ser mostrada na pagina principal, em /loja/admin/pedidos lista os pedidos.

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -132,4 +132,34 @@
   <listener>
     <listener-class>loja.webComponents.listener.ListProdutoListener</listener-class>
   </listener>
+  <servlet>
+    <description></description>
+    <display-name>AdminController</display-name>
+    <servlet-name>AdminController</servlet-name>
+    <servlet-class>loja.webComponents.controllerAdmin.AdminController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>AdminController</servlet-name>
+    <url-pattern>/admin</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>CadastrarProdutoController</display-name>
+    <servlet-name>CadastrarProdutoController</servlet-name>
+    <servlet-class>loja.webComponents.controllerAdmin.CadastrarProdutoController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>CadastrarProdutoController</servlet-name>
+    <url-pattern>/admin/cadastrar-produto</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>PedidosController</display-name>
+    <servlet-name>PedidosController</servlet-name>
+    <servlet-class>loja.webComponents.controllerAdmin.PedidosController</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>PedidosController</servlet-name>
+    <url-pattern>/admin/pedidos</url-pattern>
+  </servlet-mapping>
 </web-app>
